--- a/site.yml
+++ b/site.yml
@@ -5,12 +5,14 @@
   pre_tasks:
 
   - name: install updates (CentOS)
+    tags: always
     dnf:
       update_only: yes
       update_cache: yes
     when: ansible_distribution == "CentOS"
 
   - name: install updates (Ubuntu)
+    tags: always
     apt:
       upgrade: dist
       update_cache: yes
@@ -22,6 +24,7 @@
   tasks:
 
   - name: install apache and php package for ubuntu server
+    tags: apache , apache2 , ubuntu
     package:
       name:
         - apache2
@@ -30,6 +33,7 @@
     when: ansible_distribution == "Ubuntu"
 
   - name: install apache and php package for CentOS server
+    tags: apache , centos , httpd
     package:
       name:
         - httpd
@@ -43,12 +47,14 @@
   tasks:
 
   - name: install mariadb package (CentOS)
+    tags: centos,mariadb ,db
     dnf:
       name: mariadb
       state: latest
     when: ansible_distribution == "CentOS"
 
   - name: install mariadb package (Ubuntu)
+    tags: db,ubuntu,mariadb
     apt:
       name: mariadb-server
       state: latest
@@ -60,6 +66,7 @@
   tasks:
 
   - name: install samba package
+    tags: samba
     package:
       name: samba
       state: latest
